# CppComoProgramarEmanuel

./: CMakeLists.txt  Mains.cpp  Mains.h
C2-Introduccion/: F1_HelloWorld.cpp
C20 - Estructura de datos/Apuntes/: 20.1 Introduccion  20.2 Clases autoreferenciales  20.3 Asignacion dinamica de memoria y estructuras de datos
C20 - Estructura de datos/Código/: Main.cpp  Main.h
C20 - Estructura de datos/Código/20,2 Clases Autorreferenciadas/: Main.h
C20 - Estructura de datos/Código/20,3 Asignacion Dinámica/: AsignacionDinámica.cpp
